syntax = "proto3";

package trojan;

// Trojan gRPC 服务
service TrojanService {
  // 双向流式 RPC，用于建立隧道
  rpc Tunnel(stream TunnelRequest) returns (stream TunnelResponse);
}

// 客户端发送的隧道数据
message TunnelRequest {
  bytes data = 1;  // 原始数据流
}

// 服务端返回的隧道数据
message TunnelResponse {
  bytes data = 1;  // 原始数据流
}